# mood-friend

./: .commitlintrc.js  .gitignore  Anchor.toml  PDR.md  PRD.md  README.md  bsconfig.json  bun.lockb  package.json  tailwind.config.js  tsconfig.json  vite.config.web.js
api/: MoodApi.res
app/: App.js
app/state/: Providers.res
apps/MoodiSaga/: README.md  app.json  bun.lockb  package.json
apps/MoodiSaga/android/: settings.gradle
apps/MoodiSaga/android/app/: build.gradle
apps/MoodiSaga/components/: Header.tsx
apps/MoodiSaga/ios/: Podfile
apps/MoodiSaga/ios/MoodiSaga/: AppDelegate.mm  Info.plist  (+1 more)
apps/MoodiSaga/ios/MoodiSaga.xcodeproj/: project.pbxproj
apps/MoodiSaga/ios/MoodiSaga.xcworkspace/: contents.xcworkspacedata
apps/MoodiSaga/screens/: MainScreen.tsx
apps/MoodiSaga/util/: rpc.ts
bindings/: Buffer.res  Bun.res  Http.res  Remix.res  StringEncoding.res  WalletAdapter.res  Web3.res
docs/: COMPLIANCE_CHECKLIST.md  ECONOMY.md  PRD.md  PRIVACY_POLICY.md  SECURITY_PLAN.md  SYSTEM_ARCHITECTURE.md  WIREFRAME.txt
frontend/: package.json
frontend/pages/: root.js
keypairs/: life_metric-keypair.json  moodi-keypair.json
programs/life-metric/: Anchor.toml  Cargo.toml
programs/life-metric/programs/life-metric/: Cargo.toml
programs/life-metric/src/: lib.rs  state.rs
programs/life-metric/tests/: life-metric.ts
programs/moodi/: Cargo.toml
programs/moodi/src/: lib.rs
scripts/: README.md  bun.lockb  package.json  utils.ts
tests/: life-metric.ts  moodi.ts  pda-helpers.ts  test-keys.ts  test-utils.ts
web-ui/: WebUi.js  WebUi.res
(+7 files in other folders)
